--- a/README
+++ b/README
@@ -15,15 +15,17 @@ job control, history, command substitution, and dynamic configuration.
 Also, as a by-product of the design, it is remarkably easy to extend
 and add functionality.
 
+Sqsh was developped by Scott C. Gray, and is currently maintained by
+Michael Peppler (mpeppler@peppler.org)
+
 Availability
 -=-=-=-=-=-=-
 
 Sqsh may be found on the following sites:
 
     http://www.sqsh.org/
+    http://sourceforge.net/projects/sqsh/
 
-If you have trouble reaching any of the sites above, you can
-send me e-mail at sgray@inventa.com.
 
 Licensing
 -=-=-=-=-=-
