--- a/README
+++ b/README
@@ -37,5 +37,5 @@ therefore may be freely distributed under the terms of this license.
 Building and Installing
 -=-=-=-=-=-=-=-=-=-=-=-
 
-Refer to the INSTALL file for directions on installation.  Silicon
-Graphics IRIX users please read the README.SGI included as well.
+Refer to the INSTALL file for directions on installation.
+
