Fix version in sqsh.1

--- a/doc/sqsh.1
+++ b/doc/sqsh.1
@@ -1,4 +1,4 @@
-.\" $Id: sqsh.1,v 1.1.1.1 2001/10/23 20:31:06 gray Exp $
+.\" $Id: sqsh.1,v 1.1.1.1 2004/04/07 12:35:01 chunkm0nkey Exp $
 .\" Copyright (C) 1995, 1996 by Scott C. Gray
 .\"
 .\" This program is free software; you can redistribute it and/or modify
@@ -37,9 +37,9 @@
 .B \\$1           \" 	Buffer name in bold
 ..                \" End the macro
 .fp 5 CR
-.TH SQSH 1 "04 Sep 1999"
+.TH SQSH 1 "11 Apr 2004"
 .ds )H Sqsh
-.ds ]W Version 2.0
+.ds ]W Version 2.1.1
 .\" 
 .\" ==========================================
 .SH NAME
