Various fixes - see changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-11-05  Michael Peppler  <mpeppler@peppler.org>
 
+	* src/sqsh_main.c (main): Don't set "width" to the terminal 
+	width if it has been set via the .sqshrc file.
+
+	* src/cmd_connect.c (cmd_connect): Change sprintf() to strncpy()
+	to avoid possible buffer overflow problem.
+
 	* src/dsp_desc.c (dsp_desc_bind): Comment out code to limit 
 	datafmt.maxlength to the column display max len. Avoids "bind
 	resulted in truncation" errors for text/image/varchar/varbinary
@@ -73,7 +79,7 @@
 	should enable wide varchar() columns to be retrieved correctly
 	when sqsh is built with 12.5.x OpenClient.
 
-$Id: ChangeLog,v 1.7 2004/11/04 19:47:25 mpeppler Exp $
+$Id: ChangeLog,v 1.8 2004/11/05 13:01:12 mpeppler Exp $
 
 Changes from 1.8 to 2.0
    o  New build system/directory structure. Should build against
