--- a/doc/sqsh.1
+++ b/doc/sqsh.1
@@ -1,4 +1,4 @@
-.\" $Id: sqsh.1,v 1.5 2004/11/08 07:42:50 mpeppler Exp $
+.\" $Id: sqsh.1,v 1.6 2004/12/02 14:21:36 mpeppler Exp $
 .\" Copyright (C) 1995, 1996 by Scott C. Gray
 .\"
 .\" This program is free software; you can redistribute it and/or modify
@@ -282,10 +282,10 @@ is established.
 .\"
 .TP
 .B -C \fIsql\fP
-Causes the \fIsql\fP command to issued by sqsh, similar to the
+Causes the \fIsql\fP command to be executed by sqsh, similar to the
 same behavior exhibited by the \fB-i\fP flag.  This \fIsql\fP statment
-may not contain double quotes (this limitation will be lifted
-in future releases of sqsh).
+may not contain double quotes (this limitation may be lifted
+in a future release of sqsh).
 .\"
 .\" -d severity
 .\"
