check in for 2.1.4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-30  Michael Peppler  <mpeppler@peppler.org>
+
+	* src/sqsh_main.c (main): Add support for -P command line argument
+	hiding via a pipe (a la isql).
+
 2005-07-24  Michael Peppler  <mpeppler@peppler.org>
 
 	* src/var_dsp.c (var_set_style): Add CSV style (patch from
@@ -110,7 +115,7 @@
 	should enable wide varchar() columns to be retrieved correctly
 	when sqsh is built with 12.5.x OpenClient.
 
-$Id: ChangeLog,v 1.12 2005/04/09 15:29:26 mpeppler Exp $
+$Id: ChangeLog,v 1.13 2005/07/24 11:41:19 mpeppler Exp $
 
 Changes from 1.8 to 2.0
    o  New build system/directory structure. Should build against
