--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -1,6 +1,12 @@
-$Id: ReleaseNotes,v 1.3 2004/11/24 13:21:39 mpeppler Exp $
+$Id: ReleaseNotes,v 1.4 2006/04/16 09:45:33 mpeppler Exp $
 
-Release Notes 
+Release Notes
+
+sqsh 2.1.5
+
+Experimental support for kerberos network authentication, via the
+-K and -R command line flags.
+Various bug fixes. 
 
 sqsh 2.1.4
 
